# partial-semigroup

./: .gitignore  .travis.yml  README.md  cabal.ghc-9-2.project  cabal.project  default.nix  flake.nix  hie.yaml  readme.md  shell.nix  stack-8.yaml  stack-9.yaml  stack-lts-10.yaml  stack-lts-12.yaml  stack-lts-13.yaml  stack-lts-15.yaml  stack-lts-2.yaml  stack-lts-6.yaml  stack-lts-9.yaml  stack-nightly.yaml  stack.yaml
.github/workflows/: haskell.yml  test.hs  test.yml
configurations/: ghc-8.10.project  ghc-8.8.project  ghc-9.0.project  ghc-9.2.project
foo/: package.yaml
foo/test/: hedgehog.hs
nix/: default.nix  sources.json
partial-semigroup/: changelog.md  package.yaml  partial-semigroup.cabal  readme.md  src-hedgehog
partial-semigroup-hedgehog/: changelog.md  license.txt  partial-semigroup-hedgehog.cabal  readme.md
partial-semigroup-hedgehog/src/Test/PartialSemigroup/: Hedgehog.hs
partial-semigroup-test/: package.yaml  partial-semigroup-test.cabal
partial-semigroup-test/no-hedgehog/Test/PartialSemigroup/: Hedgehog.hs
partial-semigroup-test/src-hedgehog/Test/PartialSemigroup/: Hedgehog.hs
partial-semigroup-test/src/Test/: PartialSemigroup.hs
partial-semigroup/no-identity/Data/PartialSemigroup/: Identity.hs
partial-semigroup/src-identity/Data/PartialSemigroup/: Identity.hs
partial-semigroup/src/Data/: PartialSemigroup.hs  PartialSemigroup.hs-boot
partial-semigroup/src/Data/PartialSemigroup/: Generics.hs
partial-semigroup/test/: docs.hs  examples.hs  generics.hs  hedgehog.hs  properties.hs
partial-semigroup/test/Test/PartialSemigroup/: Hedgehog.hs
