name: partial-semigroup-test
version: 0.1.0.3
synopsis: Testing utilities for the partial-semigroup package
category: Algebra, Testing

description:
  Testing utilities for the partial-semigroup package, notably property testing
  to check the PartialSemigroup axioms.

homepage:    https://github.com/chris-martin/partial-semigroup
bug-reports: https://github.com/chris-martin/partial-semigroup/issues

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin <ch.martin@gmail.com>

license: Apache-2.0
license-file: license.txt

build-type: Simple
cabal-version: >= 1.10

flag enable-hedgehog
  default: True
  description:
    Require the `hedgehog` package.
    .
    Disabling this flag removes the `Test.PartialSemigroup.Hedgehog` module.

source-repository head
  type: git
  location: https://github.com/chris-martin/partial-semigroup

library
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

  build-depends:
      base >=4 && <4.11
    , partial-semigroup >=0.1 && <0.2

  if flag(enable-hedgehog)
    hs-source-dirs: src-hedgehog
    exposed-modules: Test.PartialSemigroup.Hedgehog
    build-depends: hedgehog >=0.5 && <0.6
